--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tsconfig/svelte": "^2.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "gsap": "^3.8.0",
+    "sirv-cli": "^1.0.0",
+    "ws": "^8.2.3"
   }
 }
